# AI-Rate-My-Professor

./: README.md  agent.py  main.py
backend/: .env.example  agent.py  main.py  pyproject.toml  rag.py
backend/data/: sample.json
backend/templates/: chat.html
backend/tools/: ratemyprofessor.py  search_professor_by_name.graphql  search_university_by_name.graphql
templates/: chat.html
tools/: ratemyprofessor.py  search_teachers_by_school_id.graphql
